1.06
 - Add EXAMPLE sections to man page.
 - Add README.
 - Add REPOSITORY section to man page.
 - Add VERSION to runtrans script.
 - Add check for arguments.
 - Add utf8 encoding to doc.
 - Improve SEE ALSO section.
 - Move from MetaTrans package.