@@ -7,3 +7,4 @@
  - Add utf8 encoding to doc.
  - Improve SEE ALSO section.
  - Move from MetaTrans package.
+ - Update Module::Install to 1.08 version.
